# Ignis

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.txt  README.md
Docs/Source/: conf.py  (+1 more)
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp  Editor.h  Entry.cpp
Engine/: CMakeLists.txt
Engine/Include/Application/: Application.h
Engine/Include/Core/Application/: Application.h
Engine/Include/Core/Job/: Condition.h  Job.h  JobSystem.h
Engine/Include/Core/Math/: Random.h
Engine/Include/Core/Memory/: Allocator.h  Memory.h  RawAllocator.h
Engine/Include/Core/Misc/: Assert.h  Format.h  Log.h
Engine/Include/Core/Platform/: Entry.h  Internals.h  Platform.h  Thread.h
Engine/Include/Core/Reflection/: Descriptor.h  Reflector.h  Resolver.h
Engine/Include/Core/Threads/: Atomic.h  Thread.h
Engine/Include/Core/Types/: Any.h  Array.h  BaseTypes.h  Function.h  Map.h  Pair.h  Pointer.h  Queue.h  String.h  Time.h  Traits.h
Engine/Include/Job/: Condition.h  Job.h  JobSystem.h
Engine/Include/Platform/: Entry.h  Internals.h
Engine/Include/Platform/Threading/: Mutex.h  Thread.h
Engine/Source/Core/Job/: Fiber.cpp  JobSystem.cpp  SwapContextMS.asm  SwapContextSysV.asm
Engine/Source/Core/Math/: Random.cpp
Engine/Source/Core/Memory/: Memory.cpp  RawAllocator.cpp
Engine/Source/Core/Misc/: Assert.cpp  Log.cpp
Engine/Source/Job/: Fiber.cpp  Fiber.h  GetContextMS.asm  GetContextSysV.asm  JobSystem.cpp  SwapContextSysV.asm
Engine/Source/Platform/: Internals.cpp  Thread.cpp
Engine/Tools/Spark/: Main.cpp
Engine/Visualizers/: Core.natvis
(+28 files in other folders)
